--- a/burger-queen/src/components/components.css
+++ b/burger-queen/src/components/components.css
@@ -1,15 +1,14 @@
 
-.App-logo{
-    height: 50px;
-    width: 50px;
-  }
 
 .navbar{
   display: flex;
   justify-content: center;
+  color:white;
 
 } 
 
   h1{
     color:white;
+    display: flex;
+    justify-content: center;
   }
