--- a/burger-queen/src/components/components.css
+++ b/burger-queen/src/components/components.css
@@ -1,8 +1,12 @@
+.card-img-top{
+    width: 100px;
+    height: 100px;
 
+}
 
-  h1{
-    color:white;
-   
-  }
-
+.print-order{
+display: flex;
+justify-content: space-around;
+background-color: rgb(238, 234, 8);
+}
 
