add img items to json, template prov in progress

--- a/burger-queen/src/components/components.css
+++ b/burger-queen/src/components/components.css
@@ -26,3 +26,16 @@
      margin-top: 0.5em;
      margin-bottom: 0.5em;
 }
+h1{
+    justify-content: center;
+    position: relative;
+}
+
+img{
+    height: 30%;
+    width: 30%;
+}
+.kitchen{
+    padding: 0.5em;
+    margin: 0.5em;
+}
