--- a/burger-queen/src/components/components.css
+++ b/burger-queen/src/components/components.css
@@ -6,12 +6,13 @@
 
 .print-order{
     position: relative;
-    float: left;
+  
     padding: 0.5em;
     margin-left: 0.5em;
     margin-right: 0.5em;
     margin-top: 0.5em;
     margin-bottom: 0.5em;
+    border: 2px solid rgb(185, 102, 102);
 }
 
 
